2008-01-18 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditNote.py: focus on text field on start
	* src/Editors/_EditChildRef.py: add usability: name of child, edit btn
	* src/Editors/_EditFamily.py: grab Errors.WindowActiveError
	* src/glade/gramps.glade: add usability to childref, see #1462

2008-01-17 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditChildRef.py: set focus on OK button for quick work
	* src/Editors/_EditFamily.py: double click on child, adding child
               choosing existing child, brings up child ref editor, #1462

2008-01-17  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/ScratchPad.py: remove tooltip for events as it crashes.
    * src/Utils.py: cleanup

2008-01-17 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/RelationView.py: shorter toolbar strings, #1553

2008-01-17 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/WriteCD.py: check if gnome is the desktop, #1599

2008-01-17  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/ArgHandler.py: 0001588: -a summary does nothing

2008-01-17 Jim Sack <jgsack@san.rr.com>
	* src/plugins/NarrativeWeb.py : fix parens typo/error

2008-01-17 Benny Malengier <benny.malengier@gramps-project.org>
	* src/glade/gramps.glade: wrong visible setting in some editors, #1612

2008-01-17 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/_RelationView.py: isue #1605, not twice in same family

2008-01-17 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/PersonView.py: issue 1451, double click to expand nodes

2008-01-13  Jerome Rapinat <romjerome@yahoo.fr>
	* src/plugins/NarrativeWeb.py: make Filter translatable
	0001490: Cannot translate few 'filter' labels 

2008-01-16  Stéphane Charette <stephanecharette@gmail.com>
	* debian/changelog: skip everything related to help
	* debian/rules: skip everything related to help